--- a/app/views/admin/application/_navigation.html.erb
+++ b/app/views/admin/application/_navigation.html.erb
@@ -7,8 +7,10 @@ for all resources in the admin dashboard,
 as defined by the routes in the `admin/` namespace
 %>
 
+
 <nav class="navigation">
-  <%= link_to(t("administrate.navigation.back_to_app"), root_url, class: "button button--alt button--nav") if defined?(root_url) %>
+  <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "button button--nav" %>
+  <% link_to(t("administrate.navigation.back_to_app"), root_url, class: "button button--alt button--nav") if defined?(root_url) %>
 
   <% Administrate::Namespace.new(namespace).resources_with_index_route.each do |resource| %>
     <%= link_to(
